# owui-python-sdk

./: .coverage  README.md  main.py  openapi.json  pyproject.toml  setup.py
examples/: knowledge_api_example.py
owui_sdk/: __init__.py  client.py  exceptions.py
owui_sdk/api/: __init__.py  audio.py  auths.py  base.py  channels.py  chat.py  chats.py  configs.py  files.py  functions.py  images.py  knowledge.py  memories.py  models.py  pipelines.py  retrieval.py  tasks.py  tools.py  users.py
owui_sdk/models/: __init__.py  audio.py  auth.py  channel.py  chat.py  config.py  file.py  function.py  image.py  knowledge.py  memory.py  models.py  pipeline.py  retrieval.py  task.py  tool.py  user.py
owui_sdk/utils/: __init__.py  error_handling.py  logging.py  validation.py
tests/: test_audio.py  test_auths.py  test_channels.py  test_chat.py  test_chats.py  test_configs.py  test_files.py  test_functions.py  test_images.py  test_knowledge.py  test_memories.py  test_models.py  test_pipelines.py  test_retrieval.py  test_tasks.py  test_tools.py  test_users.py  test_utils.py
